GNOME Bugzilla – Bug 689568
st-private: Don't round-trip through a font-string
Last modified: 2012-12-03 21:01:23 UTC
ClutterText can support a PangoFontDescription directly.
Created attachment 230574 [details] [review] st-private: Don't round-trip through a font-string
Review of attachment 230574 [details] [review]: OK.
Attachment 230574 [details] pushed as ead0286 - st-private: Don't round-trip through a font-string